Fixing hero animation on Safari

--- a/source/stylesheets/utilities/_corner.scss
+++ b/source/stylesheets/utilities/_corner.scss
@@ -1,5 +1,8 @@
 .Corner {
   position: absolute;
+
+  width: 100%;
+
   max-height: 100%;
 }
 
